Fix general layout of view page

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -462,12 +462,6 @@ main {
     padding-top:1.1em;
 }
 
-
-#mfr {
-    padding-left: 25px;
-    padding-top: 25px;
-}
-
 #header {
     padding: 0px;
     margin-left: 12px;
@@ -478,11 +472,6 @@ hr {
     margin-bottom: 0.5em;
     border-style: inset;
     border-width: 1px;
-}
-#view_project {
-    margin-right: 20px;
-    height:100px;
-    padding:15px;
 }
 
 #right_panel {
